<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WayMainActivity" 
    android:background="@drawable/bj1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/TV_Text"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="8pt"
        />
   <!-- 对话框 -->
   <!-- number对话框只能接受数字-->
   <EditText 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="phone"
       android:maxLength="11"
       android:hint="@string/ET_Hint"
       android:textColorHint="@android:color/darker_gray"
       android:textColor="@android:color/holo_red_light"
       android:layout_marginTop="10dp"
       android:id="@+id/ET_ID"/>
	<!-- 按钮：功能选择按钮 +功能开启/关闭-->
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/FPL_BIN_Text"
	    android:textColor="@android:color/holo_blue_light"
	    android:layout_marginTop="20dp"
	    android:background="@android:color/black"
	    android:drawableLeft="@drawable/come"
	    android:paddingLeft="30dp"
	    android:drawablePadding="-60dp"
	    android:id="@+id/FPL_BIN_ID"
	    />
	<!-- 去电 -->
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/QPL_BIN_Text"
	    android:textColor="@android:color/holo_orange_light"
	    android:layout_marginTop="20dp"
	    android:background="@android:color/black"
	    android:drawableLeft="@drawable/out"
	    android:paddingLeft="30dp"
	    android:drawablePadding="-60dp"
	    android:id="@+id/QPL_BIN_ID"/>
	<!-- 短信 -->
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/MSG_BIN_Text"
	    android:textColor="@android:color/holo_green_light"
	    android:layout_marginTop="20dp"
	    android:background="@android:color/black"
	    android:drawableLeft="@drawable/msg"
	    android:paddingLeft="30dp"
	    android:drawablePadding="-60dp"
	    android:id="@+id/MSG_BIN_ID"/>
	<!-- 功能 -->
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/GN_BIN_Text"
	    android:textColor="@android:color/holo_red_light"
	    android:layout_marginTop="20dp"
	    android:background="@android:color/black"
	    android:paddingLeft="0dp"
	    android:drawablePadding="-60dp"
	    android:id="@+id/GN_BIN_ID"/>
</LinearLayout>
